[package]
name = "urldecoding"
version = "0.1.0"
authors = ["jxw3ng <jx.w@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#https://github.com/bt/rust_urlencoding
urlencoding = "~1.1.1"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
[profile.release]
opt-level = "z"
